refactor: adjust available command line arguments for compatibility with jextract 22
Fixes #21